--- a/clientSite/package.json
+++ b/clientSite/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "firebase": "^11.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.27.0",
     "sort-by": "^1.2.0",
+    "sweetpagination": "^1.0.15",
     "swiper": "^11.1.14",
     "tw-elements-react": "^1.0.0-alpha-end"
   },
